# grpcfy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.fleet/: run.json
cmake/: grpcfy.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/include/grpcfy/client/: CallContext.h  ClientEngine.h  Common.h  Options.h  ServerStreamCall.h  ServerStreamCallContext.h  ServerStreamEntry.h  SingularCall.h  SingularCallContext.h
src/client/include/grpcfy/client/detail/: CallContext.h  ServerStreamCallContext.h  ServerStreamEntry.h  SingularCallContext.h
src/core/: CMakeLists.txt
src/core/include/grpcfy/core/: Grpc.h  Logger.h  PointerTagging.h
src/example/: CMakeLists.txt
src/example/client/: CMakeLists.txt  main.cpp
src/example/protocol/: CMakeLists.txt  FooBar.proto
src/example/server/: CMakeLists.txt  Common.h  GetFooHandler.h  MemberFunctionAcceptorPrototype.h  SubscribeFooHandler.h  main.cpp
src/server/: CMakeLists.txt
src/server/include/grpcfy/server/: Configuration.h  ServerStreamMethod.h  ServiceEngine.h  SingularMethod.h
src/server/include/grpcfy/server/detail/: MethodContext.h  ServerStreamMethodContext.h  ServerStreamMethodMetadata.h  SingularMethodContext.h  SingularMethodMetadata.h
